Updated image path

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <table>
       <tr>
-        <td> <img src="C:\Users\Pruthviraj\Documents\Web Development\HTML- Personal Site\images\pruthvi-modified.png"
+        <td> <img src="images\pruthvi-modified.png"
           width="150" height="150"
           alt="pruthviraj profile picture"></td>
 
